fixing navbar spacing

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -356,6 +356,13 @@ top:20px;
     outline: none;
 }
 
+#product-show-sidebar .product-sidebar-button .buy-now-product{
+    color: black;
+    position: relative;
+    top: 0px;
+    text-decoration: none;
+}
+
 .lower-button{
     top: 67px;
     background: #FFD814;
